--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "axios": "^1.7.2",
+    "canvas-confetti": "^1.9.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-konva": "^18.2.10",
     "react-slider": "^2.0.6",
-    "styled-components": "^6.1.12"
+    "sonner": "^1.5.0",
+    "styled-components": "^6.1.12",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -35,6 +38,7 @@
     "postcss": "^8.4.40",
     "react-router-dom": "^6.25.1",
     "tailwindcss": "^3.4.7",
-    "vite": "^5.3.4"
+    "vite": "^5.3.5",
+    "vite-jsconfig-paths": "^2.0.1"
   }
 }
